--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "grunt test"
   },
   "author": "Doan Van Quang",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "grunt": "^0.4.5"
+  }
 }
