--- a/package.json
+++ b/package.json
@@ -9,6 +9,23 @@
   "author": "Doan Van Quang",
   "license": "MIT",
   "devDependencies": {
-    "grunt": "^0.4.5"
-  }
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-watch": "^0.6.1"
+  },
+  "dependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-uglify": "^0.6.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/doanvanquang/angular-directive.git"
+  },
+  "bugs": {
+    "url": "https://github.com/doanvanquang/angular-directive/issues"
+  },
+  "homepage": "https://github.com/doanvanquang/angular-directive"
 }
