--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Study the angular directive",
   "main": "app.js",
   "scripts": {
+    "postinstall": "bower install",
     "test": "grunt test",
     "start": "http-server"
   },
